# MyChat

./: .gitignore  esbuild.config.js  main.py  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.js  uno.config.js  vite.config.js
.run/: migrate_contrib.run.xml  mychat_runserver.run.xml
chat/: asgi.py
mychat/: apps.py  asgi.py  consumers.py  dbrouters.py  debug_checks.py  forms.py  messages.py  middleware.py  models.py  routing.py  settings.py  urls.py  utils.py
mychat/conf/: dj_iconify.py
mychat/events/: user_event.py
mychat/management/commands/: migrate_contrib.py  migrate_mychat.py  mychat_runserver.py  send_friend_request.py  sendmsg.py  url_resolve.py
mychat/models/: __init__.py  user_pair.py
mychat/services/: conversation.py  friendship.py  read_receipt_service.py  user_state.py
mychat/static/mychat/: strictObject.js
mychat/templates/: chatroom.html  login.html
mychat/templates/mychat/: base.html
mychat/templates/mychat/app/: add_contact.html  base.html  contact_list.html  conversations.html  index.html  message_list.html
mychat/templates/mychat/auth/: login.html
mychat/templates/mychat/layouts/: base.html  base_content.html  base_shell.html  base_shell_content.html  base_stack.html  base_stack_content.html
mychat/templates/mychat/pages/: conversations.html  friends.html
mychat/templates/mychat/popups/: base.html  (+1 more)
mychat/templatetags/: defaulttags.py  icon_tags.py  user_tags.py
mychat/utils/: __init__.py  redis_client.py
static/: db.js  main.js  recentChatList.js  stirctObject.js  stores.js  tailwind.css  userEvent.js
(+15 files in other folders)
